docs/errors/examples/use-before-declaration-in-block/use-before-declaration-in-block.expected.txt
error[E1202]: use before declaration in block scope
  --> use-before-declaration-in-block.grob:6:26
   |
 6 |         result = result + sep + item
   |                          ^^^
   |
   = note: 'sep' is declared on line 7, after this use in the same block
   = help: declare 'sep' before the loop body, or move the declaration above the use
